# CVAE_AMP_Design

./: LICENSE  README.md  pyproject.toml  requirements.txt
data/dataset/: VAE_train_real.xlsx  amp_train6450.xlsx  hp_test416.xlsx
data/features/: 20aa_AF5_1_feature.xlsx  20aa_AF6_1_feature.xlsx  20aa_AF6_3_feature.xlsx  20aa_AF6_feature.xlsx  20aa_AF7_feature.xlsx  20aa_pc5_2_feature.xlsx  20aa_pc5_3_feature.xlsx  20aa_pc6_2_feature.xlsx  BLOSUM62_test_AtoY.xlsx
data/raw/: aep_test404.xlsx  aep_train1215.xlsx  aep_val404.xlsx  amp_test2149.xlsx  amp_val2149.xlsx  hp_train1250.xlsx  hp_val416.xlsx
models/generation/: cvae_model.pth  cvae_pred_model.pth  vae_model.pth
models/prediction/: AMP_Pc7.pth  XGB_aep_model.pkl  XGB_hp_model.pkl
scripts/: filter_results.py  generate.py  generate_and_filter.py  predict.py  run_pipeline.py  train_generation.py  train_prediction.py  validate_models.py
src/cvae_amp/: __init__.py
src/cvae_amp/config/: defaults.py  paths.py
src/cvae_amp/generation/: __init__.py  losses.py  models.py  regularizers.py  sampling.py  training.py  vocab.py
src/cvae_amp/pipeline/: __init__.py  dedup.py  filters.py  homology.py  workflow.py
src/cvae_amp/prediction/: __init__.py  features.py  loaders.py  models.py
src/cvae_amp/prediction/training/: __init__.py  retrain_best.py  train_attention.py  train_ensemble.py
src/cvae_amp_design.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
